k8s/infra/ingress/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: unbrdn
  labels:
    environment: prod
  annotations:
    # Cert-Manager 설정
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Nginx Ingress Controller 설정
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/websocket-services: "socket"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/connection-upgrade: "$connection_upgrade"
    nginx.ingress.kubernetes.io/upgrade: "$http_upgrade"
    # HTTP to HTTPS 자동 리다이렉션
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - unbrdn.me
      secretName: tls-secret
  rules:
    - host: unbrdn.me
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
          - path: /socket.io/
            pathType: Prefix
            backend:
              service:
                name: socket
                port:
                  number: 4000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 3000
